fixed animation transition on collapse & fixed white space beneath footer

--- a/src/style/components/banner.scss
+++ b/src/style/components/banner.scss
@@ -44,7 +44,8 @@
 
 @media screen and (max-width: 768px) {
   .banner {
-    height: 111px;
+    height: 15vh;
+    // margin: 5vh 0vh;
 
     .banner__text {
       @include h1_mixin(white, 'mobile');
