--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,16 +14,12 @@
 @import 'pages/about.scss';
 
 html {
-  height: 100%;
-  width: auto;
+min-width: 320px;
 }
 body {
-  height: 100%;
-
-  width: auto;
+ 
 }
 #main {
-  height: auto;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -38,6 +34,8 @@ body {
   }
   @media screen and (max-width: 768px) {
     margin: $main_margin--mobile;
+    min-height: 70vh;
+    
   }
   @media screen and (max-width: 400px) {
     margin: $main_margin--max400px;
@@ -47,23 +45,21 @@ body {
     padding: 0% 0% 1% 1%;
   }
 }
+
 .app-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   min-width: 320px;
-  height: 100%;
+  // height: 100%;
   margin: 0%;
 }
 #root {
   display: flex;
-  flex-direction: column;
+  // flex-direction: column;
   // height: 100%;
-  
-  @media screen and (max-width: 768px) {
-    margin-bottom: -400px;
-  }
 }
+
 * {
   margin: 0px;
   padding: 0px;
