--- a/src/style/pages/about.scss
+++ b/src/style/pages/about.scss
@@ -1,6 +1,17 @@
 @import '../variables.scss';
 @import '../mixins.scss';
 
+#container_about_page{
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+}
 #collapses_about_page {
   margin: 5%;
+  @media screen and (max-width:768px) {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
 }
